<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/actionbarcolor"
    tools:context="com.intera.conte2.last.LoginActivity">

    <Button
        android:id="@+id/bt_register"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="registerClick"
        android:text="@string/register"
        android:visibility="gone"/>


    <Button
        android:id="@+id/bt_enter"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_register"

        android:layout_centerVertical="true"
        android:gravity="center"
        android:onClick="enterClick"
        android:padding="@dimen/bt_enter_padding"
        android:text="@string/enter"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/sv_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bt_enter"
        android:visibility="gone">


        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"

                android:layout_width="@dimen/iv_logo_size"
                android:layout_height="@dimen/iv_logo_size"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ll_login_margin"
                android:gravity="center"
                android:orientation="vertical"
                >

                <AutoCompleteTextView
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:text="@string/test_username"
                    android:visibility="gone"
                   >


                </AutoCompleteTextView>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/et_margintop"

                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"

                    android:text="@string/test_password"
                    android:visibility="gone"
                   />


                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="@dimen/tv_forget__password_marginTop"
                    android:clickable="true"
                    android:onClick="resetClick"
                    android:text="@string/forgot_password"
                    android:visibility="gone"
                  />

                <!--Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_facebook_login"
                    android:onClick="loginFacebook"
                    android:text="facebook"/-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/actionbar_text"
        android:textSize="30sp"
        />
    <android.support.v7.widget.AppCompatButton
        android:layout_margin="40dp"
        android:id="@+id/bt_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_facebook_button_background_color"
        android:backgroundTint="@color/com_facebook_button_background_color_pressed"
        android:backgroundTintMode="@color/com_facebook_button_background_color_pressed"
        android:onClick="loginFacebook"
        android:padding="10dp"
        android:text="@string/enter_with_facebook"
        android:gravity="center"
        android:textColor="@color/com_facebook_button_login_silver_background_color"

        />
</LinearLayout>
